Base components and structure

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,18 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import url("./fonts.css");
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-color: #f1f1f1;
+  --background-color: #1d1d1d;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+* {
+  box-sizing: border-box;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+  padding: 0;
+  margin: 0;
+  font-family: "TT Hoves Pro Trial Variable Regular";
+  color: var(--foreground-color);
+  background-color: var(--background-color);
 }
